--- a/apps/cli/package.json
+++ b/apps/cli/package.json
@@ -1,21 +1,24 @@
 {
   "name": "@monarchjs/cli",
-  "version": "0.0.1",
-  "description": "",
+  "version": "0.0.0",
+  "description": "Monarch CLI tool",
+  "private": false,
   "main": "dist/index.js",
+  "bin": {
+    "monarch": "dist/index.js"
+  },
   "scripts": {
     "build": "node_modules/.bin/tsc"
   },
   "keywords": [],
-  "author": "",
+  "author": "Tucker Hawkinson <public@hawkinson.dev>",
   "license": "MIT",
   "devDependencies": {
     "@types/yargs": "^17.0.22",
-    "prettier": "^2.8.4",
     "typescript": "^4.7.4"
   },
   "dependencies": {
-    "yargs": "^17.7.0",
-    "@monarchjs/builder": "*"
+    "@monarchjs/builder": "*",
+    "yargs": "^17.7.0"
   }
 }
