--- a/packages/lib-core/package.json
+++ b/packages/lib-core/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@monarchjs/builder",
+  "name": "@monarchjs/core",
   "version": "0.0.0",
   "description": "",
-  "main": "dist/index.js",
+  "main": "index.js",
   "scripts": {
     "build": "tsc"
   },
@@ -10,7 +10,7 @@
   "author": "Tucker Hawkinson <public@hawkinson.dev>",
   "license": "MIT",
   "dependencies": {
-    "@monarchjs/core": "*"
+    "@monarchjs/types": "*"
   },
   "devDependencies": {
     "typescript": "^4.7.4"
