--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@monarchjs/builder",
+  "name": "@monarchjs/types",
   "version": "0.0.0",
-  "description": "",
+  "description": "Global types used across monorepo",
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc"
@@ -9,9 +9,6 @@
   "keywords": [],
   "author": "Tucker Hawkinson <public@hawkinson.dev>",
   "license": "MIT",
-  "dependencies": {
-    "@monarchjs/core": "*"
-  },
   "devDependencies": {
     "typescript": "^4.7.4"
   }
